--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
      <meta property="og:title" content="Invitación">
     <meta property="og:description" content="¡Vamos a celebrar!">
-    <meta property="og:image" itemprop="image" content="https://invitacion-de-Noah.netlify.app/files/miniatura.png" />
+    <meta property="og:image" itemprop="image" content="https://invitacion-noah.netlify.app/files/miniatura.png" />
 
     
     <title>Invitación</title>
